--- a/popup.html
+++ b/popup.html
@@ -4,13 +4,14 @@
   <title>My Extension</title>
   <style>
     body {
-      width: 200px;
+      height: 600px;
+      width: 600px;
       text-align: center;
     }
   </style>
 </head>
 <body>
-  <button id="addDivButton">Add Div</button>
+  <div id="screenshotContainer"></div>
   <script src="popup.js"></script>
 </body>
 </html>
