Update title in popup.html

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>My Extension</title>
+  <title>Take Screenshot from youtube videos and create PDF</title>
   <style>
     body {
       height: 400px;
